# frappe_theme

./: .cursorrules  .gitignore  .plan.md  .pre-commit-config.yaml  CLAUDE.md  DOCUMENTATION.md  FEATURES_SUMMARY.md  QUICK_START.md  README.md  package.json  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: ci.yml  coverage.yml  frappe-tests.yml  pr.yml  pre-commit.yml  security.yml
docs/: additional-components.md  api-reference.md  approval-timeline.md  background-file-generation.md  changelog-component.md  cloud-storage.md  custom-property-setter.md  dashboard-mode.md  data-protection.md  gallery-and-carousel.md  geo_details.md  getting-started.md  india-heatmap.md  number-cards-and-charts.md  sva-datatable.md  theme-customization.md  workflow-customization.md  workspace-configuration.md
frappe_theme/: .eslintrc.js  api.py  boot.py  custom_db.py  dt_api.py  hooks.py  install.py  modules.txt  package-lock.json  package.json  patches.txt  permission_overrides.py  print.py  requirements.txt  wp_api.py
frappe_theme/ai_report_generator/: SKILL.md  api.py  llm_provider.py  meta_analyzer.py  prompt_templates.py  sql_generator.py
frappe_theme/apis/: add_more_batch.py  approval_timeline.py  data_protection.py  deletion_log.py  doc_pdf.py  excel copy.py  excel.py  export_json.py  extract_zip_images.py  file_manager.py  mcp_registry.py  meta.py  openai.py  public_api.py  sva_property_setter.py
frappe_theme/controllers/: chart.py  dt_conf.py  filters.py  number_card.py  timeline.py  wren.py
frappe_theme/cron/: sync_ticket_status.py
frappe_theme/fixtures/: svadatatable_configuration.json
mcp_server/: .env  .env.example  README.md  SKILL.md  server.py  start_mcp.sh  start_tunnel.sh
workflows/: pr.yaml
(+305 files in other folders)
